--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adaptor'",
+    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
@@ -21,20 +21,18 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.16.2",
-    "@builder.io/qwik-city": "0.0.128",
-    "@types/eslint": "8.4.10",
-    "@types/node": "^18.11.18",
-    "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "5.48.0",
-    "@typescript-eslint/parser": "5.48.0",
-    "eslint": "8.31.0",
-    "eslint-plugin-qwik": "0.16.2",
-    "node-fetch": "3.3.0",
-    "prettier": "2.8.1",
-    "typescript": "4.9.4",
-    "undici": "5.14.0",
-    "vite": "^4.0.4",
+    "@builder.io/qwik": "0.100.0",
+    "@builder.io/qwik-city": "~0.100.0",
+    "@types/eslint": "8.21.3",
+    "@types/node": "^18.15.9",
+    "@typescript-eslint/eslint-plugin": "5.56.0",
+    "@typescript-eslint/parser": "5.56.0",
+    "eslint": "8.36.0",
+    "eslint-plugin-qwik": "0.100.0",
+    "prettier": "2.8.7",
+    "typescript": "5.0.2",
+    "undici": "5.21.0",
+    "vite": "4.2.1",
     "vite-tsconfig-paths": "3.5.0"
   }
 }
