--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@types/node": "^18.15.9",
     "@typescript-eslint/eslint-plugin": "5.56.0",
     "@typescript-eslint/parser": "5.56.0",
+    "@vanilla-extract/css": "^1.9.3",
     "eslint": "8.36.0",
     "eslint-plugin-qwik": "0.100.0",
     "prettier": "2.8.7",
+    "styled-vanilla-extract": "^0.5.4",
     "typescript": "5.0.2",
     "undici": "5.21.0",
     "vite": "4.2.1",
